--- a/bundle_hadoop/src/partials/sidebar.html
+++ b/bundle_hadoop/src/partials/sidebar.html
@@ -1,11 +1,31 @@
 <aside class="sidebar">
-  <button class="sbar">Close</button>
+  <!-- <div class="sidebar-head">
+    <div class="sidebar-head-title">
+      <div class="sidebar-head-title__text">Arenadata Hadoop</div>
+    </div>
+    <div class="sidebar-head-version">
+      <div class="sidebar-head-version__text">Select version</div>
+      <select>
+        <option>Current</option>
+        <option>1.0</option>
+        <option>2.0</option>
+      </select>
+    </div>
+  </div> -->
+  <div class="timer" style="margin-top: 30px"></div>
+  <div class="sidebar-head-button">
+    <hr class="hr-line" />
+    <div class="sbar sbar-close"></div>
+    <hr class="hr-line" />
+  </div>
+
+  <!-- <button class="sbar">Close</button> -->
 
   <div class="nav-links">
     <ul id="ul">
       <li class="nav-links_items">
-        <span class="nav-links_item"
-          ><i class="getstarted"></i>
+        <span class="nav-links_item">
+          <i class="getstarted tooltip-top-left"></i>
           <span class="nav-links_item__text">Get Started</span>
         </span>
         <ul class="is_parent">
@@ -207,7 +227,7 @@
       <!-- Planning guide -->
       <li class="nav-links_items">
         <span class="nav-links_item"
-          ><i class="planningguides"></i>
+          ><i class="planningguides tooltip-top-left"></i>
           <span class="nav-links_item__text">Planning guide</span>
         </span>
         <ul class="is_parent">
@@ -244,7 +264,7 @@
       <!-- Concepts -->
       <li class="nav-links_items">
         <span class="nav-links_item"
-          ><i class="concepts"></i>
+          ><i class="concepts tooltip-top-left"></i>
           <span class="nav-links_item__text">Concepts</span>
         </span>
         <ul class="is_parent">
@@ -285,7 +305,7 @@
       <!-- References -->
       <li class="nav-links_items">
         <span class="nav-links_item"
-          ><i class="references"></i>
+          ><i class="references tooltip-top-left"></i>
           <span class="nav-links_item__text">References</span>
         </span>
         <ul class="is_parent">
@@ -394,7 +414,7 @@
       <!-- Release notes  -->
       <li class="nav-links_items">
         <span class="nav-links_item_release"
-          ><i class="releasenotes"></i>
+          ><i class="releasenotes tooltip-top-left"></i>
           <a href="#">
             <span class="nav-links_item__text">Release notes</span>
           </a>
