--- a/bundle_hadoop/src/layouts/has_sidebar.html
+++ b/bundle_hadoop/src/layouts/has_sidebar.html
@@ -9,10 +9,14 @@
   <div class="page_nav">
     <!-- Header -->
     {{> header }}
+    <!-- navbar -->
+    {{> nav}}
     <!-- Sidebar -->
     {{> sidebar}}
+    <!-- right nav -->
+    {{> right-nav}}
     <!-- Main -->
-    <main class="main" style="color: #FFF;">
+    <main class="main" style="color: #fff">
       <!-- <div class="container"> -->
       {{> body }}
       <!-- main -->
