--- a/bundle_hadoop/src/partials/sidebar.html
+++ b/bundle_hadoop/src/partials/sidebar.html
@@ -12,15 +12,13 @@
       </select>
     </div>
   </div> -->
-  <div class="timer" style="margin-top: 30px"></div>
+  <!-- <div class="timer" style="margin-top: 30px"></div> -->
   <div class="sidebar-head-button">
     <hr class="hr-line" />
     <div class="sbar sbar-close"></div>
     <hr class="hr-line" />
   </div>
-
   <!-- <button class="sbar">Close</button> -->
-
   <div class="nav-links">
     <ul id="ul">
       <li class="nav-links_items">
@@ -32,7 +30,6 @@
           <li class="nav-links-li">
             <a href="#">How to start</a>
           </li>
-
           <li>
             <span class="nav-links_item_parent">
               <a href="#">Online installation</a>
@@ -42,7 +39,6 @@
               <li>
                 <a href="#"> ADCM installation </a>
               </li>
-
               <li>
                 <span class="nav-links_item_parent">
                   <a href="#">Preparing hosts</a>
@@ -57,7 +53,6 @@
                   </li>
                 </ul>
               </li>
-
               <li>
                 <span class="nav-links_item_parent">
                   <a href="#">ADH cluster installation</a>
@@ -87,7 +82,6 @@
                   </li>
                 </ul>
               </li>
-
               <li>
                 <span class="nav-links_item_parent">
                   <a href="#">Monitoring installation</a>
@@ -119,7 +113,6 @@
               </li>
             </ul>
           </li>
-
           <!-- OFFLINE -->
           <li>
             <span class="nav-links_item_parent">
@@ -130,7 +123,6 @@
               <li>
                 <a href="#"> ADCM installation </a>
               </li>
-
               <li>
                 <span class="nav-links_item_parent">
                   <a href="#">Preparing hosts</a>
@@ -145,7 +137,6 @@
                   </li>
                 </ul>
               </li>
-
               <li>
                 <span class="nav-links_item_parent">
                   <a href="#">Enterprise Tools cluster installation</a>
@@ -164,13 +155,11 @@
                   <li>
                     <a href="#"> Adding components</a>
                   </li>
-
                   <li>
                     <a href="#"> Cluster installing</a>
                   </li>
                 </ul>
               </li>
-
               <li>
                 <span class="nav-links_item_parent">
                   <a href="#">ADH cluster installation</a>
@@ -189,7 +178,6 @@
                   <li>
                     <a href="#"> Adding components</a>
                   </li>
-
                   <li>
                     <a href="#"> Services configuring</a>
                   </li>
@@ -199,13 +187,11 @@
                   <li>
                     <a href="#"> ET settings importing</a>
                   </li>
-
                   <li>
                     <a href="#"> Cluster installing</a>
                   </li>
                 </ul>
               </li>
-
               <li>
                 <span class="nav-links_item_parent">
                   <a href="#">Monitoring installation</a>
@@ -224,10 +210,18 @@
           </li>
         </ul>
       </li>
+      <!-- how to -->
+      <li class="nav-links_items">
+        <span class="nav-links_item_link">
+          <a href="../howto.html">
+            <i class="howto tooltip-top-left"></i>
+            <span class="nav-links_item__text">How to</span>
+          </a>
+        </span>
+      </li>
       <!-- Planning guide -->
       <li class="nav-links_items">
-        <span class="nav-links_item"
-          ><i class="planningguides tooltip-top-left"></i>
+        <span class="nav-links_item"><i class="planningguides tooltip-top-left"></i>
           <span class="nav-links_item__text">Planning guide</span>
         </span>
         <ul class="is_parent">
@@ -248,7 +242,6 @@
               </li>
             </ul>
           </li>
-
           <li class="nav-links-li">
             <a href="#">Recommendations</a>
           </li>
@@ -260,11 +253,9 @@
           </li>
         </ul>
       </li>
-
       <!-- Concepts -->
       <li class="nav-links_items">
-        <span class="nav-links_item"
-          ><i class="concepts tooltip-top-left"></i>
+        <span class="nav-links_item"><i class="concepts tooltip-top-left"></i>
           <span class="nav-links_item__text">Concepts</span>
         </span>
         <ul class="is_parent">
@@ -274,7 +265,6 @@
           <li class="nav-links-li">
             <a href="#">HDFS</a>
           </li>
-
           <li>
             <span class="nav-links_item_parent">
               <a href="#">HBase</a>
@@ -289,7 +279,6 @@
               </li>
             </ul>
           </li>
-
           <li class="nav-links-li">
             <a href="#">YARN and Resource Manager</a>
           </li>
@@ -301,11 +290,9 @@
           </li>
         </ul>
       </li>
-
       <!-- References -->
       <li class="nav-links_items">
-        <span class="nav-links_item"
-          ><i class="references tooltip-top-left"></i>
+        <span class="nav-links_item"><i class="references tooltip-top-left"></i>
           <span class="nav-links_item__text">References</span>
         </span>
         <ul class="is_parent">
@@ -326,7 +313,6 @@
               </li>
             </ul>
           </li>
-
           <li>
             <span class="nav-links_item_parent">
               <a href="#">MapReduce</a>
@@ -341,7 +327,6 @@
               </li>
             </ul>
           </li>
-
           <li>
             <span class="nav-links_item_parent">
               <a href="#">YARN</a>
@@ -410,12 +395,11 @@
           </li>
         </ul>
       </li>
-
       <!-- Release notes  -->
       <li class="nav-links_items">
-        <span class="nav-links_item_release"
-          ><i class="releasenotes tooltip-top-left"></i>
+        <span class="nav-links_item_link">
           <a href="#">
+            <i class="releasenotes tooltip-top-left"></i>
             <span class="nav-links_item__text">Release notes</span>
           </a>
         </span>
