--- a/bundle_hadoop/src/assets/scss/blocks/blocks-card.scss
+++ b/bundle_hadoop/src/assets/scss/blocks/blocks-card.scss
@@ -23,7 +23,7 @@
   width: 307px;
   height: 316px;
   margin-right: 20px;
-  // -webkit-transition: all 1.5s ease-out;
+  -webkit-transition: all 1s ease-out;
 }
 
 .blocks-card-components-card:hover {
