--- a/bundle_hadoop/src/assets/scss/blocks/footer-page.scss
+++ b/bundle_hadoop/src/assets/scss/blocks/footer-page.scss
@@ -206,3 +206,83 @@
   margin-bottom: 36px;
   color: #FCFCFD;
 }
+
+
+.icon-footer-twitter {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 16px;
+  width: 16px;
+  height: 16px;
+  background-image: url("/assets/images/twitter.svg");
+}
+
+
+.icon-footer-facebook {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 16px;
+  width: 16px;
+  height: 16px;
+  background-image: url("/assets/images/facebook.svg");
+}
+
+.icon-footer-inlinked {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 16px;
+  width: 16px;
+  height: 16px;
+  background-image: url("/assets/images/inlinked.svg");
+}
+
+.icon-footer-instagramm {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 16px;
+  width: 16px;
+  height: 16px;
+  background-image: url("/assets/images/instagramm.svg");
+}
+
+.icon-footer-h {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 16px;
+  width: 16px;
+  height: 16px;
+  background-image: url("/assets/images/h.svg");
+}
+
+.icon-footer-youtube {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 16px;
+  width: 16px;
+  height: 16px;
+  background-image: url("/assets/images/youtube.svg");
+}
+
+.icon-footer-twitter:hover {
+  background-image: url("/assets/images/twitter-hover.svg");
+}
+
+.icon-footer-facebook:hover {
+  background-image: url("/assets/images/facebook-hover.svg");
+}
+
+.icon-footer-inlinked:hover {
+  background-image: url("/assets/images/inlinked-hover.svg");
+}
+
+.icon-footer-instagramm:hover {
+  background-image: url("/assets/images/instagramm-hover.svg");
+}
+
+.icon-footer-h:hover {
+  background-image: url("/assets/images/h-hover.svg");
+}
+
+.icon-footer-youtube:hover {
+  background-image: url("/assets/images/youtube-hover.svg");
+}
