--- a/bundle_hadoop/src/partials/footer.html
+++ b/bundle_hadoop/src/partials/footer.html
@@ -60,12 +60,24 @@
     <div class="footer-page__links">
       <span class="footer-page__links-text">© Arenadata Software LLC, 2021</span>
       <div class="footer-page__icons">
-        <img src="../assets/images/twitter.svg" alt="" srcset="">
-        <img src="../assets/images/facebook.svg" alt="" srcset="">
-        <img src="../assets/images/inlinked.svg" alt="" srcset="">
-        <img src="../assets/images/instagramm.svg" alt="" srcset="">
-        <img src="../assets/images/h.svg" alt="" srcset="">
-        <img src="../assets/images/youtube.svg" alt="" srcset="">
+        <a href="#">
+          <div class="icon-footer-twitter"></div>
+        </a>
+        <a href="#">
+          <div class="icon-footer-facebook"></div>
+        </a>
+        <a href="#">
+          <div class="icon-footer-inlinked"></div>
+        </a>
+        <a href="#">
+          <div class="icon-footer-instagramm"></div>
+        </a>
+        <a href="#">
+          <div class="icon-footer-h"></div>
+        </a>
+        <a href="#">
+          <div class="icon-footer-youtube"></div>
+        </a>
       </div>
     </div>
   </div>
