--- a/bundle_hadoop/src/partials/footer.html
+++ b/bundle_hadoop/src/partials/footer.html
@@ -2,17 +2,19 @@
   <div class="footer-page">
     <div class="footer-page__info">
       <div class="footer-page__email">
-        <div class="footer-page__email-head">
-          E-mail
+        <div>
+          <div class="footer-page__email-head">
+            E-mail
+          </div>
+          <div class="footer-page__email-info">
+            <div class="footer-page__email-info-email">
+              info@arenadata.io
+            </div>
+            <!-- <a href="" class="footer-page__email-info-contact btn-outline_"> Contact us</a> -->
+          </div>
         </div>
-        <div class="footer-page__email-info">
-          <div class="footer-page__email-info-email">
-            info@arenadata.io
-          </div>
-          <a href="" class="footer-page__email-info-contact btn-outline_"> Contact us</a>
-          <div class="footer-page__email-info-policy">
-            <a href="#">Privacy Policy</a>
-          </div>
+        <div class="footer-page__email-info-policy">
+          <a href="#">Privacy Policy</a>
         </div>
       </div>
       <div class="footer-page__products">
