--- a/bundle_hadoop/src/partials/sidebar.html
+++ b/bundle_hadoop/src/partials/sidebar.html
@@ -343,7 +343,7 @@
               <a href="#">Configuration parameters</a>
               <i class="chevron chevron_right"></i>
             </span>
-            <ul class="is_parent over-y">
+            <ul class="is_parent conf-par over-y">
               <div class="new-over">
                 <li>
                   <a href="#">Airflow </a>
