--- a/bundle_hadoop/src/assets/scss/style.scss
+++ b/bundle_hadoop/src/assets/scss/style.scss
@@ -9,6 +9,7 @@
 // pages
 @import "blocks/pages/hadoop.scss";
 @import "blocks/pages/howto.scss";
+@import "blocks/pages/offlinst.scss";
 
 body {
   background-color: #212121;
