--- a/bundle_hadoop/src/partials/sidebar.html
+++ b/bundle_hadoop/src/partials/sidebar.html
@@ -37,7 +37,7 @@
             </span>
             <ul class="is_parent">
               <li>
-                <a href="#"> ADCM installation </a>
+                <a href="../adcminstall.html"> ADCM installation </a>
               </li>
               <li>
                 <span class="nav-links_item_parent">
@@ -116,7 +116,7 @@
           <!-- OFFLINE -->
           <li>
             <span class="nav-links_item_parent">
-              <a href="#">Offline installation</a>
+              <a href="../offlineinstallation.html">Offline installation</a>
               <i class="chevron chevron_right"></i>
             </span>
             <ul class="is_parent">
@@ -215,7 +215,7 @@
         <span class="nav-links_item_link">
           <a href="../howto.html">
             <i class="howto tooltip-top-left"></i>
-            <span class="nav-links_item__text">How to</span>
+            <span class="nav-links_item__text">How To!</span>
           </a>
         </span>
       </li>
